method delete added to project
