# routes/todo_routes.go
@@ -8,5 +8,6 @@ import (
 func RegisterTodoRoutes(router *gin.Engine) {
 	router.GET("/todos", controllers.GetTodos)
 	router.POST("/todos", controllers.CreateTodo)
+	router.DELETE("/todos/:id", controllers.DeleteTodo)
 }
 
